updated about me

--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
     </header>
     <!--Cover letter and filler text-->
     <main>
-        <section class="hero" alt="large cover photo">
+        <section class="hero" alt="large cover photo of a feild ">
             <div id="subtitle-img">"A new job is like a blank book and you are the author<br> -Unknown</div>
         </section>
 
         <div class="main-box">
             <!--Filler text about me-->
-            <section class="about_me" id="about-me">
-                <h2 class="align-left">More about me</h2>
-                <p class="align-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum nam ratione
-                    delectus deleniti vitae illo? Labore, veniam natus? Earum Lorem ipsum dolor sit amet consectetur,
-                    adipisicing elit. Expedita necessitatibus esse cupiditate
-                    provident dolorem error laboriosam iste. Provident atque, repellendus nulla quod adipisci, incidunt
-                    cumque velit exercitationem culpa eos blanditiis.</p>
+            <section id="about">
+                <h2>About Me</h2>
+                <p>
+                    My name is Hannah Franz I am working towards becoming a softwear developer. I currently work in
+                    health care and am looking for a change in carrer. I have a background in coustomer service and
+                    working with a team to achieve a common goal.
+                </p>
             </section>
 
             <section class="about-me" id="work">
