updated main works project

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </section>
 
         <div class="main-box">
-            <!--Filler text about me-->
+            <!-- text about me-->
             <section id="about">
                 <h2>About Me</h2>
                 <p>
@@ -43,14 +43,18 @@
                 </p>
             </section>
 
-            <section class="about-me" id="work">
-                <h2 class="align-left">Work</h2>
-                <div class="work-left">
-                    <span class="img-box1">
-                        <a href="https://github.com/Hfranz1/Horiseon-Refactoring" target="_blank"><img
-                                src="./assets/Horiseon-Refactoring.png" alt="Photo of site" class="main-img-resize"></a>
-                        <div class="img-title"> Horiseon-Refactoring</div>
-                    </span>
+            <section id="work">
+                <h2>Work</h2>
+                <div>
+                    <article id="project-1">
+                        <a href="https://carlincb.github.io/Marvelisms/" target="_blank">
+                            <figure>
+                                <img id="img-1" src="./assets/Screen Shot 2021-10-23 at 7.24.55 PM.png"
+                                    alt="Marvelisms">
+                            </figure>
+                        </a>
+                        <div id="top-left-1">Marvelisms</div>
+                    </article>
 
                     <div id="work-parent">
                         <span class="img-box img-one">
