work day project added

--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
                         <div id="top-left-1">Marvelisms</div>
                     </article>
 
+                    <div id="top-left-2">Work Day Scheduler</div>
+                    <figure>
+                        <a href=" https://hfranz1.github.io/Work-Day-Scheduler/" target="_blank">
+                            <img class="img" src="./assets/Screen Shot 2021-10-23 at 7.39.58 PM.png"
+                                alt="Work Day Scheduler">
+                        </a>
+                    </figure>
+
                     <div id="work-parent">
                         <span class="img-box img-one">
                             <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
