--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <figure>
                 <img src="./assets/unnamed.jpg" alt="Head shot">
             </figure>
-            <div id="subtitle-img">"A new job is like a blank book and you are the author<br> -Unknown</div>
+            <div id="subtitle">"A new job is like a blank book and you are the author<br> -Unknown</div>
         </section>
         <section id="about">
             <h2>About Me</h2>
@@ -54,27 +54,30 @@
                 </article>
                 <div id="parent">
                     <article class="child" id="project-2">
-                        <div id="top-left-2">Work Day Scheduler</div>
                         <figure>
                             <a href=" https://hfranz1.github.io/Work-Day-Scheduler/" target="_blank">
                                 <img class="img" src="./assets/Screen Shot 2021-10-23 at 7.39.58 PM.png"
                                     alt="Work Day Scheduler">
                             </a>
                         </figure>
+                        <div id="top-left-2">Work Day Scheduler</div>
                     </article>
                     <article class="child" id="project-3">
                         <figure>
-                            <a href="" target="_blank"><img class="img" src="" alt=""></a>
+                            <a href=" https://hfranz1.github.io/Code-Quiz/" target="_blank"><img class="img"
+                                    src="./assets/Screen Shot 2021-10-24 at 8.40.40 PM.png" alt="Code-Quiz"></a>
                         </figure>
-                        <div id="top-left-3">name</div>
+                        <div id="top-left-3">Code Quiz</div>
                     </article>
                 </div>
                 <div id="parent">
                     <article class="child" id="project-4">
                         <figure>
-                            <a href="" target="_blank"><img class="img" src="" alt=""></a>
+                            <a href="https://hfranz1.github.io/Secure-Password-Generator/" target="_blank"><img
+                                    class="img" src="./assets/Screen Shot 2021-10-24 at 8.42.40 PM.png"
+                                    alt="Password-generator"></a>
                         </figure>
-                        <div id="top-left-4">name</div>
+                        <div id="top-left-4">Password Genterator</div>
                     </article>
                     <article class="child" id="project-5">
                         <figure>
