--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </figure>
             <div id="subtitle">"A new job is like a blank book and you are the author<br> -Unknown</div>
         </section>
-        <section id="about">
+        <section id="about-me">
             <h2>About Me</h2>
             <p>
                 My name is Hannah Franz I am working towards becoming a softwear developer. I currently work in
@@ -89,7 +89,7 @@
             </div>
         </section>
     </main>
-    <footer id="contact">
+    <footer id="content-me">
         <h2>Contact Me</h2>
         <ul>
             <li><a href="mailto:hannahfranz25@gmail.com" target="_blank">hannahfranz25@gmail.com</a></li>
